--- a/ui/MacroKeys_Configurator.glade
+++ b/ui/MacroKeys_Configurator.glade
@@ -8,36 +8,38 @@
     <property name="default-width">800</property>
     <property name="default-height">400</property>
     <child>
-      <object class="GtkFrame" id="frameBase">
+      <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label-xalign">0</property>
-        <property name="shadow-type">none</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkAlignment">
+          <object class="GtkButton" id="btnTryMe">
+            <property name="label" translatable="yes">Try Me</property>
             <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="left-padding">12</property>
-            <child>
-              <object class="GtkButton" id="btnTryMe">
-                <property name="label" translatable="yes">Try Me</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-                <property name="halign">center</property>
-                <property name="valign">center</property>
-                <property name="margin-left">905</property>
-                <property name="margin-top">604</property>
-              </object>
-            </child>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
         </child>
-        <child type="label">
-          <object class="GtkLabel">
+        <child>
+          <object class="GtkButton">
+            <property name="label" translatable="yes">button</property>
             <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="label" translatable="yes">Frame Label</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
         </child>
       </object>
     </child>
